# ellipsoidal-sphere-optimization

./: .gitignore  LICENSE  README.md  exp.ipynb  pyproject.toml  setup.cfg
optimization/: _timer.py
optimization/algorithms/: __init__.py  adaptive_regularized_newton.py  gradient_descent.py  manifold.py  newton.py  parameter.py  trust_region.py
optimization/problem/: __init__.py  examples.py  problem.py
