[project]
name = "ellipsoidal-sphere-optimization"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "black",
    "flake8",
    "matplotlib",
    "mypy",
    "numpy",
    "scipy",
    "sympy",
]
dynamic =["version"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119